[package]
name = "meet"
version = "0.1.0"
authors = ["Matthew Alonso <granjef3@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.2.18"
google-calendar3 = "1.0.10"
# This project intentionally uses an old version of Hyper. See
# https://github.com/Byron/google-apis-rs/issues/173 for more
# information.
hyper = "^0.10"
hyper-rustls = "^0.16"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^1.0"
chrono = "0.4.7"
directories = "2.0.2"
humantime = "1.2.0"
